bloco-topo finished

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
                 </nav>
             </div>
         </header>
+
+        <div class="bloco-principal">
+            <div class="bloco-topo">
+                <div class="quadrado-esquerdo"></div>
+            
+                <div class="quadrado-direito">
+                    <div class="retangulo-topo-quadrado-direito"></div>
+                    <div class="retangulo-baixo-quadrado-direito"></div>
+                </div>
+            </div>
+        </div>
         
     </body>
 </html>
