starting bloco-base

--- a/index.html
+++ b/index.html
@@ -30,7 +30,27 @@
                     <div class="retangulo-baixo-quadrado-direito"></div>
                 </div>
             </div>
-        </div>
-        
+
+            <div class="bloco-base">
+                <div class="retangulo-principal-esquerdo"></div>
+                <div class="retangulo-principal-direito">
+                    <div class="bloco-texto"></div>
+                    <div class="bloco-conteudo">
+                        <div class="coluna-1">
+                            <div class="bloco-1-coluna-1"></div>
+                            <div class="bloco-2-coluna-1"></div>
+                        </div>
+                        <div class="coluna-2">
+                            <div class="bloco-1-coluna-2"></div>
+                            <div class="bloco-2-coluna-2"></div>
+                        </div>
+                        <div class="coluna-3">
+                            <div class="bloco-1-coluna-3"></div>
+                            <div class="bloco-2-coluna-3"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
     </body>
 </html>
