finished model desktop

--- a/index.html
+++ b/index.html
@@ -34,23 +34,46 @@
             <div class="bloco-base">
                 <div class="retangulo-principal-esquerdo"></div>
                 <div class="retangulo-principal-direito">
-                    <div class="bloco-texto"></div>
+                    <div class="bloco-texto">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ducimus in sapiente neque cumque ad harum consectetur incidunt corporis. Debitis fugit provident pariatur amet. Magnam animi, dolores eum aspernatur suscipit alias ex itaque quia assumenda exercitationem possimus ad ullam eligendi asperiores autem, cum modi qui impedit deleniti illum quasi? Aperiam nesciunt nemo consectetur assumenda hic soluta, iste aliquid odio autem omnis quos magni dolor officia minus velit distinctio voluptate et tempore. Excepturi debitis aperiam et eligendi laudantium officiis error nostrum harum id libero, illo dignissimos quas ipsa suscipit delectus maiores, animi impedit dolorem numquam repellendus quos cum eaque odio quis?</p>
+                    </div>
                     <div class="bloco-conteudo">
-                        <div class="coluna-1">
-                            <div class="bloco-1-coluna-1"></div>
-                            <div class="bloco-2-coluna-1"></div>
+                        <div class="coluna">
+                            <div class="bloco-1">
+                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                            </div>
+                            <div class="bloco-2">
+                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                            </div>
                         </div>
-                        <div class="coluna-2">
-                            <div class="bloco-1-coluna-2"></div>
-                            <div class="bloco-2-coluna-2"></div>
+
+                        <div class="coluna">
+                            <div class="bloco-1">
+                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                            </div>
+                            <div class="bloco-2">
+                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                            </div>
                         </div>
-                        <div class="coluna-3">
-                            <div class="bloco-1-coluna-3"></div>
-                            <div class="bloco-2-coluna-3"></div>
+
+                        <div class="coluna">
+                            <div class="bloco-1">
+                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                            </div>
+                            <div class="bloco-2">
+                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>        
+        </div>
+        
     </body>
 </html>
