header responsive finished

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                     <img src="img/logo.png" alt="Logotipo da Copa do Mundo da FIFA Catar 2022">
                 </div>
                 <nav class="cabecalho_icones">
-                    <div class="invisible"><img src="./img/lupa.png"></img></div>
-                    <div class="invisible"><img src="./img/perfil.png"></img></div>
+                    <div class="invisivel"><img src="./img/lupa.png"></img></div>
+                    <div class="invisivel"><img src="./img/perfil.png"></img></div>
                     <div><img src="./img/casa.png"></img></div>
                 </nav>
             </div>
