--- a/index.html
+++ b/index.html
@@ -41,33 +41,33 @@
                     <div class="bloco-conteudo">
                         <div class="coluna">
                             <div class="bloco-1">
-                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/CAN?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
                             </div>
                             <div class="bloco-2">
-                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/BEL?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
                             </div>
                         </div>
 
                         <div class="coluna invisivel">
                             <div class="bloco-1">
-                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <img src="" alt="Informações sobre a Copa do Mundo">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
                             </div>
                             <div class="bloco-2">
-                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <img src="" alt="Informações sobre a Copa do Mundo">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
                             </div>
                         </div>
 
                         <div class="coluna invisivel">
                             <div class="bloco-1">
-                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <img src="" alt="Informações sobre a Copa do Mundo">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
                             </div>
                             <div class="bloco-2">
-                                <img src="./img/mascote.png" alt="Informações sobre a Copa do Mundo">
+                                <img src="" alt="Informações sobre a Copa do Mundo">
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
                             </div>
                         </div>
