--- a/index.html
+++ b/index.html
@@ -36,39 +36,40 @@
                 
                 <div class="retangulo-principal-direito">
                     <div class="bloco-texto">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ducimus in sapiente neque cumque ad harum consectetur incidunt corporis. Debitis fugit provident pariatur amet. Magnam animi, dolores eum aspernatur suscipit alias ex itaque quia assumenda exercitationem possimus ad ullam eligendi asperiores autem, cum modi qui impedit deleniti illum quasi? Aperiam nesciunt nemo consectetur assumenda hic soluta, iste aliquid odio autem omnis quos magni dolor officia minus velit distinctio voluptate et tempore. Excepturi debitis aperiam et eligendi laudantium officiis error nostrum harum id libero, illo dignissimos quas ipsa suscipit delectus maiores, animi impedit dolorem numquam repellendus quos cum eaque odio quis?</p>
+                        <p>Nos Estados Unidos, o futebol é considerado um esporte profissional. Em outros países ao redor do mundo, o futebol é um esporte popular. Existem várias ligas em diferentes países, e cada liga tem suas próprias regras e regulamentos. Jogar em uma liga de futebol no exterior exige habilidade, determinação e prática. Fãs de todo o mundo têm seu próprio estilo de torcer por seus times favoritos. Ao observar o fandom de outras pessoas, uma pessoa pode obter apreciação pelo esporte que sustenta a sociedade.</p>
+                        <p class="invisivel">O futebol é o esporte mais popular em muitos países. No Brasil, o futebol é parte integrante da sociedade. Pessoas de todas as idades jogam futebol na Índia, Sri Lanka e outras nações do subcontinente indiano. Na China, o futebol é conhecido como 'futebol' e pessoas de todas as idades participam dessa liga. Em muitos países, os sindicatos de futebol organizam escolas e constroem estádios para as comunidades locais participarem dos jogos. As escolas administradas pelo governo oferecem aulas de futebol obrigatórias para crianças de 6 a 15 anos. Claramente, o futebol é uma parte importante da vida cotidiana de muitas pessoas.</p>
                     </div>
                     <div class="bloco-conteudo">
                         <div class="coluna">
                             <div class="bloco-1">
                                 <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/CAN?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                                <p>Antes do Qatar, a única participação do Canadá em uma edição de Copa do Mundo havia sido em 1986, no México. A seleção estava no Grupo C. O desempenho foi decepcionante: 3 derrotas em 3 jogos, 5 gols sofridos e 0 marcados.</p>
                             </div>
                             <div class="bloco-2">
                                 <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/BEL?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                                <p>A Bélgica esteve presente em 11 mundiais, sendo que sua melhor classificação se deu em 2018 na Rússia, onde terminou 3º lugar. Na Eurocopa, o melhor desempenho foi o vice-campeonato em 1980.</p>
                             </div>
                         </div>
 
                         <div class="coluna invisivel">
                             <div class="bloco-1">
-                                <img src="" alt="Informações sobre a Copa do Mundo">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                                <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/CRO?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
+                                <p>A seleção croata já participou 5 vezes da Copa do Mundo, mas nunca levou a taça. Sua melhor colocação ocorreu em 2018 na última Copa, que aconteceu na Rússia</p>
                             </div>
                             <div class="bloco-2">
-                                <img src="" alt="Informações sobre a Copa do Mundo">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                                <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/MAR?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
+                                <p>Eles participaram da Copa do Mundo da FIFA cinco vezes, estando classificados para 2022. Seu melhor resultado veio em 1986, quando foi a primeira seleção africana a terminar em 1º lugar do grupo na Copa do Mundo.</p>
                             </div>
                         </div>
 
                         <div class="coluna invisivel">
                             <div class="bloco-1">
-                                <img src="" alt="Informações sobre a Copa do Mundo">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                                <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/BRA?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
+                                <p> São cinco títulos mundiais (1958, 1962, 1970, 1994 e 2002), dois vice-campeonatos (1950 e 1998), dois terceiros lugares (1938 e 1978) e dois quartos lugares (1974 e 2014) em 20 participações.</p>
                             </div>
                             <div class="bloco-2">
-                                <img src="" alt="Informações sobre a Copa do Mundo">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quae! Sunt blanditiis alias tenetur quasi ipsa consequatur doloremque expedita vel.</p>
+                                <img src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/ESp?tx=c_fill,g_auto,q_auto" alt="Informações sobre a Copa do Mundo">
+                                <p>A seleção espanhola participou de sua 16ª edição da Copa do Mundo de Futebol em 2022.</p>
                             </div>
                         </div>
                     </div>
